Робота над секцією Герой

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
         </div>
     </header>
     <main>
-        <section class="hero">
-            <div class="container">
-                <div class="hero-container">
-                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                    <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="overlay">
+            <section class="hero">
+                <div class="container">
+                    <div class="hero-container">
+                        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                        <button class="hero-button" type="button">Заказать услугу</button>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
         <section class="features-section">
             <div class="container">
                 <h2 hidden>Наши особенности</h2>
