--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
             </ul>
         </div>
     </header>
+    <span class="line"></span>
     <main>
         <h1 hidden>Портфолио</h1>
         <div class="container">
