Роблю іконки соцмереж

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </ul>
             </nav>
             <ul class="schedule-contacts list">
-                <li class="item"><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
-                <li class="item"><a class="contacts" href="tel:+380991111111">+38 096 111 11 11</a></li>
+                <li class="item"><a class="contacts envelope" href="mailto:info@example.com">info@devstudio.com</a></li>
+                <li class="item"><a class="contacts smartphone" href="tel:+380991111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -80,6 +80,44 @@
                     <li class="team-item"><img class="team-photo" src="./images/img4.jpg" width="270" height="260" alt="Product Designer" />
                         <h3 class="name">Игорь Демьяненко</h3>
                         <p class="employment" lang="en">Product Designer</p>
+                        <ul class="list social">
+                            <li>
+                                <a class="links">
+                                    <svg class="links-icon">
+                                        <use href="./images/sprite.svg#-iconinstagram-2">
+
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="links">
+                                    <svg class="links-icon">
+                                        <use href="./images/sprite.svg#-icontwitter-1">
+                            
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="links">
+                                    <svg class="links-icon">
+                                        <use href="./images/sprite.svg#-iconfacebook-1">
+                            
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="links">
+                                    <svg class="links-icon">
+                                        <use href="./images/sprite.svg#-iconlinkedin-1">
+
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-item"><img class="team-photo" src="./images/img5.jpg" width="270" height="260" alt="Frontend Developer" />
                         <h3 class="name">Ольга Репина</h3>
