--- a/index.html
+++ b/index.html
@@ -82,36 +82,34 @@
                         <p class="employment" lang="en">Product Designer</p>
                         <ul class="list social">
                             <li>
-                                <a class="links">
-                                    <svg class="links-icon">
-                                        <use href="./images/sprite.svg#-iconinstagram-2">
-
-                                        </use>
+                                <a class="social-links">
+                                    <svg class="links-icons">
+                                        <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="links">
-                                    <svg class="links-icon">
-                                        <use href="./images/sprite.svg#-icontwitter-1">
+                                <a class="social-links">
+                                    <svg class="links-icons">
+                                        <use href="./images/sprite.svg#twitter">
                             
                                         </use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="links">
-                                    <svg class="links-icon">
-                                        <use href="./images/sprite.svg#-iconfacebook-1">
+                                <a class="social-links">
+                                    <svg class="links-icons">
+                                        <use href="./images/sprite.svg#facebook">
                             
                                         </use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="links">
-                                    <svg class="links-icon">
-                                        <use href="./images/sprite.svg#-iconlinkedin-1">
+                                <a class="social-links">
+                                    <svg class="links-icons">
+                                        <use href="./images/sprite.svg#linkedin">
 
                                         </use>
                                     </svg>
