Останні правки до дз

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,16 @@
                 </ul>
             </nav>
             <ul class="schedule-contacts list">
-                <li class="item"><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
-                <li class="item"><a class="contacts" href="tel:+380991111111">+38 096 111 11 11</a></li>
+                <li>
+                    <a class="contacts" href="mailto:info@example.com">
+                        <svg class="contacts-icon" width="16" height="12">
+                            <use href="./images/sprite.svg#envelope"></use>
+                        </svg>info@devstudio.com</a></li>
+                <li>
+                    <a class="contacts" href="tel:+380991111111">
+                        <svg class="contacts-icon" width="10" height="16">
+                            <use href="./images/sprite.svg#smartphone"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -82,13 +90,44 @@
         </section>
     </main>
     <footer id="contacts" class="footer">
-        <div class="container">
-            <a class="logo" href="./index.html">Web<span class="logo-bottom">Studio</span></a>
-            <ul class="list footer-flexbox">
-                <li class="location">г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="mail" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
+        <div class="container footer-general">
+            <div class="footer-pack">
+                <a class="logo" href="./index.html">Web<span class="logo-bottom">Studio</span></a>
+                <ul class="footer-flexbox list">
+                    <li class="location">г. Киев, пр-т Леси Украинки, 26</li>
+                    <li><a class="mail" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="mail" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+            </div>
+            <div class="appeal">
+                <p class="appeal-title">присоединяйтесь</p>
+                <ul class="schedule-socials list">
+                    <li><a class="footer-socials">
+                            <svg class="links-icons">
+                                <use href="./images/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li><a class="footer-socials">
+                            <svg class="links-icons">
+                                <use href="./images/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li><a class="footer-socials">
+                            <svg class="links-icons">
+                                <use href="./images/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li><a class="footer-socials">
+                            <svg class="links-icons">
+                                <use href="./images/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
