Виправлення помилок дз

--- a/index.html
+++ b/index.html
@@ -87,28 +87,28 @@
                         <p class="employment" lang="en">Product Designer</p>
                         <ul class="list social">
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -121,28 +121,28 @@
                         <p class="employment" lang="en">Frontend Developer</p>
                         <ul class="list social">
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -155,28 +155,28 @@
                         <p class="employment" lang="en">Marketing</p>
                         <ul class="list social">
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -189,28 +189,28 @@
                         <p class="employment" lang="en">UI Designer</p>
                         <ul class="list social">
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-links">
+                                <a class="social-links" href="">
                                     <svg class="links-icons">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -284,25 +284,25 @@
             <div class="appeal">
                 <p class="appeal-title">присоединяйтесь</p>
                 <ul class="schedule-socials list">
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                 <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                 <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                     <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                 <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
