--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                 <ul class="site-nav list">
                     <li class="item"><a class="navigation" href="./index.html">Студия</a></li>
                     <li class="item"><a class="navigation current" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="navigation" href="#contacts">Контакты</a></li>
+                    <li class="item"><a class="navigation"  href=""href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="schedule-contacts list">
@@ -34,6 +34,7 @@
             </ul>
         </div>
     </header>
+        <span class="line"></span>
     <main>
         <h1 hidden>Портфолио</h1>
         <div class="container">
@@ -102,25 +103,25 @@
             <div class="appeal">
                 <p class="appeal-title">присоединяйтесь</p>
                 <ul class="schedule-socials list">
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                 <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                 <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                 <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li><a class="footer-socials">
+                    <li><a class="footer-socials" href="">
                             <svg class="links-icons">
                                 <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
