--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container main-top">
             <nav class="nav">
                 <a class="logo" href="./index.html">Web<span class="logo-top">Studio</span></a>
@@ -34,7 +34,6 @@
             </ul>
         </div>
     </header>
-        <span class="line"></span>
     <main>
         <h1 hidden>Портфолио</h1>
         <div class="container">
